objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__LeadToPatientProcess</fullName>
        <description>Lead to Patient conversion process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Referral</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>CareCoordinatorContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CareCoordinatorUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeName__c</fullName>
        <description>Record Type name to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeNamespace__c</fullName>
        <description>Record Type namespace to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Diagnosis__c</fullName>
        <description>Comma-delimited list of diagnoses or ICD codes associated with the referral.</description>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceGroupId__c</fullName>
        <description>Group ID of the patient&apos;s insurance.</description>
        <label>Insurance Group ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceMemberId__c</fullName>
        <description>Member ID of the patient&apos;s insurance.</description>
        <label>Insurance Member ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceType__c</fullName>
        <description>Type of primary insurance: Medicare, Medicaid, Commercial or Self-Pay</description>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self-pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsMarkedForPatientConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Lead should be converted to Patient</description>
        <label>IsMarkedForPatientConversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsOutOfNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the referral is out of network.</description>
        <label>Out Of Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryInsurance__c</fullName>
        <description>Primary health insurance company associated with the patient.</description>
        <label>Primary Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <description>Priority of the referral as designated by the referring provider.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonForOutOfNetworkReferral__c</fullName>
        <description>Reason the referral is sent out of network.</description>
        <label>Reason for Out of Network Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Preference</fullName>
                </value>
                <value>
                    <fullName>Patient Preference</fullName>
                </value>
                <value>
                    <fullName>Limited Provider Availability</fullName>
                </value>
                <value>
                    <fullName>Service Not Offered</fullName>
                </value>
                <value>
                    <fullName>Insurance Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonforReferral__c</fullName>
        <label>Reason for Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organization receiving or fulfilling the referral.</description>
        <label>Referred To Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referred To Organization)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner to whom the patient is being referred.</description>
        <label>Referred To Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referred To Practitioner)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user to whom the referral is sent.</description>
        <label>Referred To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the referring organization.</description>
        <label>Referring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner who submitted the referral.</description>
        <label>Referring Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referring Practitioner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who submitted the referral.</description>
        <label>Referring User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the patient or member Account who is being referred.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Related Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>An external identifier for the Candidate Patient.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty__c</fullName>
        <description>Specialty associated with the referral.</description>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeOfService__c</fullName>
        <description>Type of service requested.</description>
        <label>Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                    <default>true</default>
                    <label>Consultation</label>
                </value>
                <value>
                    <fullName>2nd Opinion</fullName>
                </value>
                <value>
                    <fullName>Radiology Services</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>HealthCloudGA__OpenReferrals</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HealthCloudGA__Specialty__c</columns>
        <columns>HealthCloudGA__Priority__c</columns>
        <columns>HealthCloudGA__ReferringOrganization__c</columns>
        <columns>HealthCloudGA__ReferringPractitioner__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.HealthCloudGA__PatientReferral</value>
        </filters>
        <label>Open Referrals</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>InternationalLeads</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>USLeads</queue>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__Patient</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__LeadToPatientProcess</businessProcess>
        <description>Patient record type</description>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__PatientReferral</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Referral</businessProcess>
        <label>Patient Referral</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>